# Alpha1

./: .gitattributes  .gitignore  AGENTS.md  README.md  alpha1_live.db  main.py  mt5_interface.py  pyproject.toml  settings.json  strategy.py
agents/: agent-chain.yaml
alpha1/: __main__.py
alpha1/analysis/: dashboard.py
alpha1/backtest/: engine.py  metrics.py  portfolio.py  portfolio_multi.py  report.py
alpha1/config/: instruments.py  settings.py
alpha1/live/: __init__.py  broker.py  contracts.py  engine.py  feed.py  server.py  state.py
alpha1/strategy/: fvg.py  market_structure.py  session.py  signals.py  swings.py
alpha1/web/static/: app.js
alpha1/web/templates/: base.html  dashboard.html  trades.html
configs/: default.json
scripts/: debug_exits.py  grid_search.py  run_portfolio.py
tests/: conftest.py  test_engine.py  test_engine_coverage.py  test_fvg.py  test_live_contracts.py  test_live_engine.py  test_live_server.py  test_live_state.py  test_loader.py  test_market_structure.py  test_metrics.py  test_portfolio_multi.py  test_session.py  test_signals.py  test_swings.py  test_types.py
